--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,17 +1,15 @@
-name: GitHub Actions Demo
-on: [push]
+name: Devops pipeline
+on: [push] #wa9teh bech yexiti el workflow eli metkawen men jobs (qui peuvent etre dependant ou independant)
 jobs:
-  Explore-GitHub-Actions:
+  Test: # 1 seul job metkawen men steps
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: Check out repository code #ism step
+        uses: actions/checkout@v3 # nestaamel action reusible (mawjouda)
+      - uses : actions/setup-node@v3
+        with:
+          node-version: '16'
+      - run : npm install
+      - run : npm test
+
+
