--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest --coverage"
+    "test": "jest --forceExit"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
