--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -67,7 +67,7 @@ jobs:
 
 
       - name: Deploy Amazon ECS task definition
-        uses: .aws-actions/amazon-ecs-deploy-task-definition@de0132cf8cdedb79975c6d42b77eb7ea193cf28e
+        uses: aws-actions/amazon-ecs-deploy-task-definition@de0132cf8cdedb79975c6d42b77eb7ea193cf28e
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: ${{ env.ECS_SERVICE }}
