--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,7 +4,7 @@ env:
   AWS_REGION: eu-west-1
   ECS_SERVICE: backend-app                # set this to your Amazon ECS service name
   ECS_CLUSTER: chaima                # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: .aws/task-definition # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: .aws/task-definition.json # set this to the path to your Amazon ECS task definition
   # file, e.g. ..aws/task-definition.json
   CONTAINER_NAME: backend-app
 
